[package]
name = "bandsnatch"
version = "0.2.1"
edition = "2021"
description = "A CLI batch downloader for your Bandcamp collection"
authors = ["Michael Mitchell <michael@ovyerus.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Ovyerus/bandsnatch"
repository = "https://github.com/Ovyerus/bandsnatch"
keywords = ["cli", "bandcamp", "music", "downloader", "bcdl"]
categories = ["command-line-utilities", "multimedia::audio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "4.0", features = ["derive", "env", "unicode"] }
env_logger = "0.9"
futures = "0.3.24"
futures-util = { version = "0.3", features = ["io"] }
indicatif = "0.17"
log = "0.4"
openssl = { version = "0.10.42", features = ["vendored"] }
phf = { version = "0.11.1", features = ["macros"] }
rand = "0.8"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
serde_json = "1"
shellexpand = "2.1.2"
simple-error = "0.2"
soup = "0.5"
tokio = { version = "1", features = ["full"] }
tokio-scoped = "0.2.0"
zip = "0.6"
