[package]
name = "bandsnatch"
version = "0.3.1"
edition = "2021"
description = "A CLI batch downloader for your Bandcamp collection"
authors = ["Michael Mitchell <michael@ovyerus.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Ovyerus/bandsnatch"
repository = "https://github.com/Ovyerus/bandsnatch"
keywords = ["cli", "bandcamp", "music", "downloader", "bcdl"]
categories = ["command-line-utilities", "multimedia::audio"]

[profile.release]
strip = true

[dependencies]
chrono = "0.4"
clap = { version = "4.0", features = ["derive", "env", "unicode"] }
crossbeam-utils = "0.8"
cookie_store = "0.20"
env_logger = "0.9"
http = "0.2"
indicatif = "0.17"
log = "0.4"
phf = { version = "0.11.1", features = ["macros"] }
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "cookies", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
serde_json = "1"
shellexpand = "2.1.2"
simple-error = "0.2"
soup = "0.5"
ureq = { version = "2.8", features = ["cookies", "http-interop", "json"] }
url = "2.4"
zip = "0.6"
