[package]
name = "bandsnatch"
version = "0.3.2"
edition = "2021"
description = "A CLI batch downloader for your Bandcamp collection"
authors = ["Michael Mitchell <michael@ovyerus.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Ovyerus/bandsnatch"
repository = "https://github.com/Ovyerus/bandsnatch"
keywords = ["cli", "bandcamp", "music", "downloader", "bcdl"]
categories = ["command-line-utilities", "multimedia::audio"]

[profile.release]
strip = true

[dependencies]
chrono = "0.4"
clap = { version = "4.0", features = ["derive", "env", "unicode"] }
crossbeam-utils = "0.8"
cookie_store = "0.21"
env_logger = "0.11"
governor = "0.6"
http = "1.1"
indicatif = "0.17"
log = "0.4"
phf = { version = "0.11.1", features = ["macros"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "charset", "cookies", "json", "http2", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
serde_json = "1"
shellexpand = "3.1"
simple-error = "0.3"
soup = "0.5"
url = "2.4"
zip = "2.1"
nonzero_ext = "0.3.0"
pollster = "0.3.0"
